--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Coming Soon</h1>
-<p>im working on it man</p>
+
+<head>
+    <link rel="stylesheet" href="styles/index.css">
+    <title>Home</title>
+</head>
+
+<body style="background-color: black;">
+    <div class="topnav">
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a class="active" href="index.html">Home</a>
+    </div>
 </body>
+
 </html>
