added home page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,42 @@
 
 <head>
     <link rel="stylesheet" href="styles/index.css">
-    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+    
+    <title>Home | chexedy's site</title>
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: rgb(245, 128, 101);">
     <div class="topnav">
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a class="active" href="index.html">Home</a>
+        <a href="about">About</a>
+        <a href="projects">Projects</a>
+        <a href="index.html">Home</a>
+    </div>
+
+    <br>
+    <h1>chexedy</h1>
+
+    <div class="about">
+        <div class="text">
+            <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University in New Brunswick. This site is where I can showcase what I work on in my free time, along with what I have already created.</p>
+            <br>
+            <p>I currently know Java. I'm improving at Python and C, and created this site to learn HTML and CSS! I've also done a little bit with Lua and GDScript.</p>
+        </div>
+        <div class="image">
+            <img src="assets/home/natsuhiko1.png">
+        </div>
     </div>
 </body>
+
+<br>
+<br>
+<br>
+
+<footer>
+    <div class="bottomnav">
+        <a>LinkedIn (Coming Soon)</a>
+        <a href="https://github.com/chexedy" target="_blank">GitHub</a> 
+    </div>
+</footer>
 
 </html>
