added project page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     
     <title>Home | chexedy's site</title>
