--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/projects.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
-    <title>About | chexedy's site</title>
+    <title>Fishing Frenzy | chexedy's site</title>
 </head>
 
 <body style="background-color: rgb(245, 128, 101);">
@@ -14,6 +14,12 @@
         <a href="../projects">Projects</a>
         <a href="../index.html">Home</a>
     </div>
+
+    <br>
+    <h1>Fishing Frenzy</h1>
+    <div class="about">
+        <h4>This is everything I am working on or have completed. Click the project titles for more information!</h4>
+    
 </body>
 
 <footer>
