added fishing frenzy project

--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles/projects.css">
+    <link rel="stylesheet" href="../styles/projects/fishingfrenzy.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
     <title>Fishing Frenzy | chexedy's site</title>
@@ -18,8 +18,22 @@
     <br>
     <h1>Fishing Frenzy</h1>
     <div class="about">
-        <h4>This is everything I am working on or have completed. Click the project titles for more information!</h4>
-    
+        <h4>The original game is between 2-4 players, each on controller. The goal is to capture as many fish as you can before the clock runs out. I customized this version to be only two players, with keyboard controls. I also made my own version of the game art as this is my own copy.</h4>
+    </div>
+    <br>
+    <div class="aspectratio">
+        <iframe frameborder="0" src="https://itch.io/embed-upload/13408896?color=40ad37" allowfullscreen="" width="640" height="380"><a href="https://chexedy.itch.io/fishing-frenzy">Play Fishing Frenzy on itch.io</a></iframe>
+    </div>
+    <br>
+    <br>
+    <h3>Controls</h3>
+    <div class="about">
+        <h4>Player 1 uses WASD and E</h4>
+        <h4>Player 2 uses the Arrow Keys and P</h4>
+        <br>
+        <br>
+        <h4>Please let me know on GitHub if you encounter any bugs</h4>
+    </div>
 </body>
 
 <footer>
