--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -26,7 +26,7 @@
     </div>
     <br>
     <br>
-    <h3>Controls</h3>
+    <h3>Controls (Fullscreen Recommended)</h3>
     <div class="about">
         <h4>Player 1 uses WASD and E</h4>
         <h4>Player 2 uses the Arrow Keys and P</h4>
@@ -34,6 +34,7 @@
         <br>
         <h4>Please let me know on GitHub if you encounter any bugs</h4>
     </div>
+    <br>
 </body>
 
 <footer>
