added about section

--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,23 @@
         <a href="../projects">Projects</a>
         <a href="../index.html">Home</a>
     </div>
+
+    <br>
+    <h1>About</h1>
+    <div class="list">
+        <h3>I'm currently learning these languages...</h3>
+        <h4>Java - I know the basics of the language and I am practicing to master it.</h4>
+        <h4>Python - While I'm not as good as it as I am with Java, I'm still working to get better at it.</h4>
+        <h4>C - I've started learning it as part of my Computer Architecture class but it has been difficult.</h4>
+        <h4>GDScript - I've started learning it as part of making games in Godot. I've already finished one small project using GDScript alone!</h4>
+        <h4>HTML/CSS - I created this website to start learning and begin my web design journey.</h4>
+        <h4>JavaScript - I plan to learn JS one day and both implement it here and elsewhere.</h4>
+        <br>
+        <h3>In my free time...</h3>
+        <h4>I'm looking for an internship or a job - it's cooked</h4>
+        <h4>I'm trying to create my own video game, but I have no ideas. It is part of my greater passion to work in the game development industry. My lifelong dream is to create something critically acclaimed.</h4>
+        <br>
+    </div>
 </body>
 
 <footer>
