--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
     <div class="about">
         <div class="text">
-            <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University in New Brunswick. This site is where I can showcase what I work on in my free time, along with what I have already created.</p>
-            <br>
-            <p>I currently know Java. I'm improving at Python and C, and created this site to learn HTML and CSS! I've also done a little bit with Lua and GDScript.</p>
+            <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University-New Brunswick. This site is where I can showcase what I work on in my free time, along with what I have already created.</p>
         </div>
         <div class="image">
             <img src="assets/home/natsuhiko1.png">
