--- a/projects/index.html
+++ b/projects/index.html
@@ -23,7 +23,7 @@
     <br>
     <div class="list">
         <a href="fishingfrenzy.html">Fishing Frenzy!</a>
-        <h4>This is a custom copy of the game Fishing Frenzy I developed for Rutgers COGS (Creation of Games Society). It originally was designed to be for 2-4 players using a controller, but this version is watered down to 2 players with keyboard controls.</h4>
+        <h4>This is a custom copy of the game Fishing Frenzy I developed for Rutgers COGS (Creation of Games Society), a game development club. It originally was designed to be for 2-4 players using a controller and would be played in the COGS Party Launcher, a Mario Party like system made for the club. This version is watered down to 2 players and uses keyboard controls.</h4>
     </div>
 </body>
 
