updated fishing frenzy and description

--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -18,11 +18,12 @@
     <br>
     <h1>Fishing Frenzy</h1>
     <div class="about">
-        <h4>The original game is between 2-4 players, each on controller. The goal is to capture as many fish as you can before the clock runs out. I customized this version to be only two players, with keyboard controls.</h4>
+        <h4>This is a simple 2-player Fishing Game I made for a club at my university. The original game is between 2-4 players, each on controller. The goal is to capture as many fish as you can before the clock runs out. I customized this version to be only two players, with keyboard controls.</h4>
+        <h4>Credit to my two partners for the game, one did the pixel art and the other did the main menu/results screen music.</h4>
     </div>
     <br>
     <div class="aspectratio">
-        <iframe frameborder="0" src="https://itch.io/embed-upload/13574585?color=40ad37" allowfullscreen="" width="640" height="380"><a href="https://chexedy.itch.io/fishing-frenzy">Play Fishing Frenzy on itch.io</a></iframe>
+        <iframe frameborder="0" src="https://itch.io/embed-upload/13590594?color=40ad37" allowfullscreen="" width="640" height="380"><a href="https://chexedy.itch.io/fishing-frenzy">Play Fishing Frenzy on itch.io</a></iframe>
     </div>
     <br>
     <br>
