--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
-    <title>About | chexedy's site</title>
+    <title>About | ayaan's site</title>
 </head>
 
 <body style="background-color: rgb(245, 128, 101);">
@@ -27,15 +27,15 @@
         <h4>JavaScript - I plan to learn JS one day and both implement it here and elsewhere.</h4>
         <br>
         <h3>In my free time...</h3>
-        <h4>I'm looking for an internship or a job - it's cooked</h4>
-        <h4>I'm trying to create my own video game, but I have no ideas. It is part of my greater passion to work in the game development industry. My lifelong dream is to create something critically acclaimed.</h4>
+        <h4>I'm looking for an internship or a job.</h4>
+        <h4>I'm trying to learn 3D modeling in Blender along with more advanced graphic design.</h4>
         <br>
     </div>
 </body>
 
 <footer>
     <div class="bottomnav">
-        <a>LinkedIn (Coming Soon)</a>
+        <a href="https://www.linkedin.com/in/ayaan7m/" target="_blank">LinkedIn</a>
         <a href="https://github.com/chexedy" target="_blank">GitHub</a> 
     </div>
 </footer>
