--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     
-    <title>Home | chexedy's site</title>
+    <title>Home | ayaan's site</title>
 </head>
 
 <body style="background-color: rgb(245, 128, 101);">
@@ -16,11 +16,11 @@
     </div>
 
     <br>
-    <h1>chexedy</h1>
+    <h1>Home</h1>
 
     <div class="about">
         <div class="text">
-            <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University-New Brunswick. This site is where I can showcase what I work on in my free time, along with what I have already created.</p>
+            <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University-New Brunswick. I made this site as an all around hub for whatever I am working on.</p>
         </div>
         <div class="image">
             <img src="assets/home/natsuhiko1.png">
@@ -34,7 +34,7 @@
 
 <footer>
     <div class="bottomnav">
-        <a>LinkedIn (Coming Soon)</a>
+        <a href="https://www.linkedin.com/in/ayaan7m/" target="_blank">LinkedIn</a>
         <a href="https://github.com/chexedy" target="_blank">GitHub</a> 
     </div>
 </footer>
