--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../styles/projects/fishingfrenzy.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
-    <title>Fishing Frenzy | chexedy's site</title>
+    <title>Fishing Frenzy | ayaan's site</title>
 </head>
 
 <body style="background-color: rgb(245, 128, 101);">
@@ -40,7 +40,7 @@
 
 <footer>
     <div class="bottomnav">
-        <a>LinkedIn (Coming Soon)</a>
+        <a href="https://www.linkedin.com/in/ayaan7m/" target="_blank">LinkedIn</a>
         <a href="https://github.com/chexedy" target="_blank">GitHub</a> 
     </div>
 </footer>
