--- a/about/index.html
+++ b/about/index.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
-    <title>About | ayaan's site</title>
+    <title>about | ayaan's site</title>
 </head>
 
-<body style="background-color: rgb(245, 128, 101);">
+<body style="background-color: rgb(0, 0, 0);">
     <div class="topnav">
-        <a href="../about">About</a>
-        <a href="../projects">Projects</a>
-        <a href="../index.html">Home</a>
+        <a href="../about">about</a>
+        <a href="../projects">projects</a>
+        <a href="../index.html">home</a>
     </div>
 
     <br>
-    <h1>About</h1>
+    <h1>about</h1>
     <div class="list">
         <h3>I'm currently learning these languages...</h3>
         <h4>Java - I know the basics of the language and I am practicing to master it.</h4>
