--- a/index.html
+++ b/index.html
@@ -5,25 +5,22 @@
     <link rel="stylesheet" href="styles/home.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     
-    <title>Home | ayaan's site</title>
+    <title>home | ayaan's site</title>
 </head>
 
-<body style="background-color: rgb(245, 128, 101);">
+<body style="background-color: rgb(0, 0, 0);">
     <div class="topnav">
-        <a href="about">About</a>
-        <a href="projects">Projects</a>
-        <a href="index.html">Home</a>
+        <a href="about">about</a>
+        <a href="projects">projects</a>
+        <a href="index.html">home</a>
     </div>
 
     <br>
-    <h1>Home</h1>
+    <h1>welcome</h1>
 
     <div class="about">
         <div class="text">
             <p>Hi! I'm Ayaan, a dude studying Computer Science at Rutgers University-New Brunswick. I made this site as an all around hub for whatever I am working on.</p>
-        </div>
-        <div class="image">
-            <img src="assets/home/natsuhiko1.png">
         </div>
     </div>
 </body>
