--- a/projects/fishingfrenzy.html
+++ b/projects/fishingfrenzy.html
@@ -8,11 +8,11 @@
     <title>Fishing Frenzy | ayaan's site</title>
 </head>
 
-<body style="background-color: rgb(245, 128, 101);">
+<body style="background-color: rgb(0, 0, 0);">
     <div class="topnav">
-        <a href="../about">About</a>
-        <a href="../projects">Projects</a>
-        <a href="../index.html">Home</a>
+        <a href="../about/index.html">about</a>
+        <a href="../projects/index.html">projects</a>
+        <a href="../index.html">home</a>
     </div>
 
     <br>
