--- a/projects/index.html
+++ b/projects/index.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="../styles/projects.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     
-    <title>Projects | ayaan's site</title>
+    <title>projects | ayaan's site</title>
 </head>
 
-<body style="background-color: rgb(245, 128, 101);">
+<body style="background-color: rgb(0, 0, 0);">
     <div class="topnav">
-        <a href="../about">About</a>
-        <a href="../projects">Projects</a>
-        <a href="../index.html">Home</a>
+        <a href="../about">about</a>
+        <a href="../projects">projects</a>
+        <a href="../index.html">home</a>
     </div>
 
     <br>
-    <h1>Projects</h1>
+    <h1>projects</h1>
     <div class="about">
         <h4>This is everything I am working on or have completed. Click the project titles for more information!</h4>
     </div>
